Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Collection TV</h1>
-      <h2 class="project-tagline"></h2>
+      <h2 class="project-tagline">Take your Kodi experience to the next step</h2>
       <a href="https://github.com/SportySpice/Collections" class="btn">View on GitHub</a>
       <a href="https://github.com/SportySpice/Collections/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/SportySpice/Collections/tarball/master" class="btn">Download .tar.gz</a>
@@ -25,7 +25,7 @@
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
+
 $ git checkout gh-pages
 </code></pre>
 
