--- a/index.html
+++ b/index.html
@@ -13,43 +13,29 @@
     <section class="page-header">
       <h1 class="project-name">Collection TV</h1>
       <h2 class="project-tagline">Take your Kodi experience to the next step</h2>
-      <a href="https://github.com/SportySpice/Collections/releases/download/2.0.1/plugin.video.collections.zip" class="btn">Download Now!</a>
       <a href="https://github.com/SportySpice/Collections" class="btn">View on GitHub</a>
-      <a href="https://github.com/SportySpice/Collections/zipball/master" class="btn">Source</a>
+      <a href="https://github.com/SportySpice/Collections/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/SportySpice/Collections/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <h4>
+<a id="collection-tv" class="anchor" href="#collection-tv" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collection TV</h4>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Collection TV is a  <a href="http://kodi.tv/">Kodi</a> add-on which mimics the now discontinued Collections feature in <a href="https://www.youtube.com/">YouTube</a>, while taking it a few steps further. A collection uses multiple sources in order to create one single feed (or in other words, a combined video list). Sources can be YouTube Channels/Playlists, and as of version 2.0, ANY folder inside Kodi. Whether it's a local folder, or a folder inside another add-on, it can be added as a source to your collection.</p>
 
-<pre><code>$ cd your_repo_root/repo_name
+<p>You can use any of the predefined collections or easily create your own.</p>
 
-$ git checkout gh-pages
-</code></pre>
+<h4>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h4>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<ul>
+<li><a href="https://github.com/SportySpice/Collections/releases">Releases</a></li>
+<li><a href="http://forum.kodi.tv/showthread.php?tid=227806">Kodi Forum Thread</a></li>
+<li><a href="https://github.com/SportySpice/Collections/wiki/Future-Features-&amp;-Plans">Future Features &amp; Plans</a></li>
+<li><a href="https://github.com/SportySpice/Collections/wiki/How-can-you-help%3F">How can you help?</a></li>
+<li><a href="https://github.com/SportySpice/Collections/wiki/Collection-Creation-Guide-(via-XML)">Collection Creation Guide via XML (completely optional as of version 2.0)</a></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/SportySpice/Collections">Collection TV</a> is maintained by <a href="https://github.com/SportySpice">SportySpice</a>.</span>
