Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     <section class="page-header">
       <h1 class="project-name">Collection TV</h1>
       <h2 class="project-tagline">Take your Kodi experience to the next step</h2>
-      <a href="https://github.com/SportySpice/Collections/releases/download/2.0.1/plugin.video.collections.zip" class="btn">Download Now!</a>
       <a href="https://github.com/SportySpice/Collections" class="btn">View on GitHub</a>
-      <a href="https://github.com/SportySpice/Collections/zipball/master" class="btn">Source</a>
+      <a href="https://github.com/SportySpice/Collections/zipball/master" class="btn">Download .zip</a>
+      <a href="https://github.com/SportySpice/Collections/tarball/master" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
-      <h4>
-<a id="collection-tv" class="anchor" href="#collection-tv" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collection TV</h4>
+      <h2>
+<a id="collection-tv" class="anchor" href="#collection-tv" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collection TV</h2>
 
 <p>Collection TV is a  <a href="http://kodi.tv/">Kodi</a> add-on which mimics the now discontinued Collections feature in <a href="https://www.youtube.com/">YouTube</a>, while taking it a few steps further. A collection uses multiple sources in order to create one single feed (or in other words, a combined video list). Sources can be YouTube Channels/Playlists, and as of version 2.0, ANY folder inside Kodi. Whether it's a local folder, or a folder inside another add-on, it can be added as a source to your collection.</p>
 
 <p>You can use any of the predefined collections or easily create your own.</p>
 
-<h4>
-<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h4>
+<h3>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
 
 <ul>
 <li><a href="https://github.com/SportySpice/Collections/releases">Releases</a></li>
