--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Collection TV</h1>
       <h2 class="project-tagline">Take your Kodi experience to the next step.</h2>
--      <a href="https://github.com/SportySpice/Collections/releases/download/2.0.1/plugin.video.collections.zip" class="btn">Download Now!</a>
+       <a href="https://github.com/SportySpice/Collections/releases/download/2.0.1/plugin.video.collections.zip" class="btn">Download Now!</a>
        <a href="https://github.com/SportySpice/Collections" class="btn">View on GitHub</a>
        <a href="http://forum.kodi.tv/showthread.php?tid=227806" class="btn">Forum Thread</a>
     </section>
