--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Collection TV</h1>
       <h2 class="project-tagline">Take your Kodi experience to the next step.</h2>
-       <a href="https://github.com/SportySpice/Collections/releases/download/2.0.1/plugin.video.collections.zip" class="btn">Download Now!</a>
+       <a href="https://github.com/SportySpice/Collections/releases" class="btn">Download Now!</a>
        <a href="https://github.com/SportySpice/Collections" class="btn">View on GitHub</a>
        <a href="http://forum.kodi.tv/showthread.php?tid=227806" class="btn">Forum Thread</a>
     </section>
@@ -27,11 +27,9 @@
 <p>You can use any of the predefined collections or easily create your own.</p>
 
 <h3>
-<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
+<a id="more links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
 
 <ul>
-<li><a href="https://github.com/SportySpice/Collections/releases">Releases</a></li>
-<li><a href="http://forum.kodi.tv/showthread.php?tid=227806">Kodi Forum Thread</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/Future-Features-&amp;-Plans">Future Features &amp; Plans</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/How-can-you-help%3F">How can you help?</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/Collection-Creation-Guide-(via-XML)">Collection Creation Guide via XML (completely optional as of version 2.0)</a></li>
