--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 <p>You can use any of the predefined collections or easily create your own.</p>
 
 <h3>
-<a id="more links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h3>
 
 <ul>
-<li><a href="https://github.com/SportySpice/Collections/wiki/Future-Features-&amp;-Plans">Future Features &amp; Plans</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/How-can-you-help%3F">How can you help?</a></li>
+<li><a href="https://github.com/SportySpice/Collections/wiki/Future-Features-&amp;-Plans">Future Features &amp; Plans</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/Collection-Creation-Guide-(via-XML)">Collection Creation Guide via XML (completely optional as of version 2.0)</a></li>
 </ul>
 
