--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <ul>
 <li><a href="https://github.com/SportySpice/Collections/wiki/How-can-you-help%3F">How can you help?</a></li>
 <li><a href="https://github.com/SportySpice/Collections/wiki/Future-Features-&amp;-Plans">Future Features &amp; Plans</a></li>
-<li><a href="https://github.com/SportySpice/Collections/wiki/Collection-Creation-Guide-(via-XML)">Collection Creation Guide via XML (completely optional as of version 2.0)</a></li>
+<li><a href="https://github.com/SportySpice/Collections/wiki/Collection-Creation-Guide-(via-XML)">Collection Creation Guide via XML</a> (completely optional as of version 2.0)</li>
 </ul>
 
       <footer class="site-footer">
