--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h2>
 <a id="collection-tv" class="anchor" href="#collection-tv" aria-hidden="true"><span class="octicon octicon-link"></span></a>Collection TV</h2>
 
-<p>Collection TV is a  <a href="http://kodi.tv/">Kodi</a> add-on which mimics the now discontinued Collections feature in <a href="https://www.youtube.com/">YouTube</a>, while taking it a few steps further. A collection uses multiple sources in order to create one single feed (or in other words, a combined video list). Sources can be YouTube Channels/Playlists, and as of version 2.0, ANY folder inside Kodi. Whether it's a local folder, or a folder inside another add-on, it can be added as a source to your collection.</p>
+<p>Collection TV is a  <a href="http://kodi.tv/">Kodi</a> add-on which mimics the now discontinued Collections feature in <a href="https://www.youtube.com/">YouTube</a>, while taking it a few steps further. A collection uses multiple sources in order to create one single feed (or in other words, a combined video list). Sources can be YouTube Channels/Playlists, and as of version 2.0, <u><b>ANY</b></u> folder inside Kodi. Whether it's a local folder, or a folder inside another add-on, it can be added as a source to your collection.</p>
 
 <p>You can use any of the predefined collections or easily create your own.</p>
 
